--- a/niuka.repository/application.properties
+++ b/niuka.repository/application.properties
@@ -8,3 +8,5 @@ server.ssl.keyStoreType=PKCS12
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.timeout=200
+
+spring.data.rest.basePath=/repo
