--- a/niuka.repository/application.properties
+++ b/niuka.repository/application.properties
@@ -1,12 +1,12 @@
 # keytool -genkey -alias tomcat -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 3650
 
-server.port=8443
-server.ssl.key-store=classpath:214782657090461.pfx
-server.ssl.key-store-password=214782657090461
-server.ssl.keyStoreType=PKCS12
-
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.timeout=200
+server.port=38443
+#server.ssl.key-store=classpath:214782657090461.pfx
+#server.ssl.key-store-password=214782657090461
+#server.ssl.keyStoreType=PKCS12
+#
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6379
+#spring.redis.timeout=200
 
 spring.data.rest.basePath=/repo
