--- a/niuka.wechat/application.properties
+++ b/niuka.wechat/application.properties
@@ -1,11 +1,8 @@
 wechat.appid=wxba5efd81f72a05e4
 wechat.secret=d79f268e091c8bcf533ab59bf0e31925
 wechat.api.url=https://api.weixin.qq.com/sns/jscode2session?appid=wxba5efd81f72a05e4&secret=d79f268e091c8bcf533ab59bf0e31925&grant_type=authorization_code&js_code=
-repository.user.url.search=https://127.0.0.1:8433/user/search/findByOpenId
-repository.user.url.create=https://127.0.0.1:8433/user
+repository.user.url.search=http://127.0.0.1:38443/repo/user/search/findByOpenId
+repository.user.url.create=http://127.0.0.1:38443/repo/user
 
 
 server.port=18443
-server.ssl.key-store=classpath:214782657090461.pfx
-server.ssl.key-store-password=214782657090461
-server.ssl.keyStoreType=PKCS12
