--- a/niuka.card/application.properties
+++ b/niuka.card/application.properties
@@ -1,13 +1,13 @@
 # keytool -genkey -alias tomcat -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 3650
 
 server.port=28443
-server.ssl.key-store=classpath:214782657090461.pfx
-server.ssl.key-store-password=214782657090461
-server.ssl.keyStoreType=PKCS12
-
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.timeout=200
+#server.ssl.key-store=classpath:214782657090461.pfx
+#server.ssl.key-store-password=214782657090461
+#server.ssl.keyStoreType=PKCS12
 
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
+
+tencent.ai.appid=1106909055
+tencent.ai.appkey=8ajWYMHfhGN5GYTt
+tencent.ai.ocr.general.url=https://api.ai.qq.com/fcgi-bin/ocr/ocr_generalocr
