--- a/niuka.card/pom.xml
+++ b/niuka.card/pom.xml
@@ -23,42 +23,16 @@
 			<artifactId>opencv-platform</artifactId>
 			<version>3.4.1-1.4.1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.bytedeco.javacpp-presets/tesseract-platform -->
-		<dependency>
-			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>tesseract-platform</artifactId>
-			<version>3.05.01-1.4.1</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.bytedeco/javacv-platform -->
-		<dependency>
-			<groupId>org.bytedeco</groupId>
-			<artifactId>javacv-platform</artifactId>
-			<version>1.4.1</version>
-		</dependency>
-
-		<!-- Additional dependencies required to use CUDA and cuDNN -->
-		<dependency>
-			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>opencv</artifactId>
-			<version>3.4.1-1.4.1</version>
-			<classifier>linux-x86_64-gpu</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>opencv</artifactId>
-			<version>3.4.1-1.4.1</version>
-			<classifier>macosx-x86_64-gpu</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>opencv</artifactId>
-			<version>3.4.1-1.4.1</version>
-			<classifier>windows-x86_64-gpu</classifier>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
@@ -70,6 +44,12 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
+		<dependency>
+			<groupId>com.belerweb</groupId>
+			<artifactId>pinyin4j</artifactId>
+			<version>2.5.1</version>
 		</dependency>
 	</dependencies>
 
